Break out GameToSell, and do queries async.
Make drag drop work for files.

List all the games in a real window.

--- a/GameTracking/GameTracking/GameTracking.csproj
+++ b/GameTracking/GameTracking/GameTracking.csproj
@@ -37,6 +37,9 @@
     <Reference Include="eBay.Service">
       <HintPath>..\External\eBay .NET SDK v921 Release\eBay.Service.dll</HintPath>
     </Reference>
+    <Reference Include="GongSolutions.Wpf.DragDrop">
+      <HintPath>..\packages\gong-wpf-dragdrop.0.1.4.3\lib\net40\GongSolutions.Wpf.DragDrop.dll</HintPath>
+    </Reference>
     <Reference Include="Google.GData.Client, Version=2.2.0.0, Culture=neutral, PublicKeyToken=04a59ca9b0273830, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Google\Google Data API SDK\Redist\Google.GData.Client.dll</HintPath>
@@ -78,6 +81,7 @@
     </Compile>
     <Compile Include="EbayAccess.cs" />
     <Compile Include="GameDetailer.cs" />
+    <Compile Include="GameToSell.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -101,6 +105,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
