--- a/GameTracking/GameTracking/GameTracking.csproj
+++ b/GameTracking/GameTracking/GameTracking.csproj
@@ -71,6 +71,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Processed.xaml.cs">
+      <DependentUpon>Processed.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SheetsAccess.cs" />
+    <Compile Include="ToProcess.xaml.cs">
+      <DependentUpon>ToProcess.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -81,11 +89,19 @@
     </Compile>
     <Compile Include="EbayAccess.cs" />
     <Compile Include="GameDetailer.cs" />
-    <Compile Include="GameToSell.cs" />
+    <Compile Include="ListedGame.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Processed.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ToProcess.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
