Better stuff in Processed, and split out gametosell from listedgame as they are different.

--- a/GameTracking/GameTracking/GameTracking.csproj
+++ b/GameTracking/GameTracking/GameTracking.csproj
@@ -71,6 +71,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GameToSell.cs" />
     <Compile Include="Processed.xaml.cs">
       <DependentUpon>Processed.xaml</DependentUpon>
     </Compile>
